2004-06-21  Adrian Aichner  <adrian@xemacs.org>

	* package-ui.el (pui-help-echo): Fix false cvs conflict by
	avoiding line solely composed of equal signs.

2004-06-18  Jerry James  <james@xemacs.org>

	* derived.el (define-derived-mode): Put the arguments to
	derived-mode-merge-syntax-tables in the correct order.

2004-06-17  Jerry James  <james@xemacs.org>

	* derived.el (define-derived-mode): XEmacs does not have
	char-table-parent.  Use derived-mode-merge-syntax-tables instead.

2004-06-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* subr.el (split-string): Clean up docstring.

2004-06-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* help.el (with-syntax-table): Removed.  (Prefer version in subr.el.)

2004-06-16  Jerry James  <james@xemacs.org>

	* cl.el (cl-set-substring): Increment start by the length of the
	string, not the string itself.

2004-06-07  Jerry James  <james@xemacs.org>

	* derived.el: Synch with Emacs 21.3.
	* subr.el (with-local-quit): New, from Emacs 21.3.
	* subr.el (delayed-mode-hooks): New variable, from Emacs 21.3.
	* subr.el (run-mode-hooks): New function, from Emacs 21.3.
	* subr.el (delay-mode-hooks): New macro, from Emacs 21.3.

2004-06-10  Adrian Aichner  <adrian@xemacs.org>

	* cus-edit.el (custom-save-variables): Fix bug introduced by
	nconc/make-list removal.
	* cus-edit.el (custom-save-faces): Ditto.

2004-06-07  Adrian Aichner  <adrian@xemacs.org>

	* cus-edit.el (custom-browse-visibility): Typo fix.
	* cus-edit.el (custom-variable-value-create): Ditto.
	* cus-edit.el (custom-save-variables): Simply use push instead of
	make-list and nconc, as suggested by Hrvoje and already used in
	21.4.
	* cus-edit.el (custom-save-faces): Ditto.

2004-06-07  Adrian Aichner  <adrian@xemacs.org>

	* mule/ethio-util.el (ethio-sera-to-fidel-region): Phrase
	duplication typo fixes for typos found by
	xemacs-builds/adrian/typology/phrase-duplication-typo.pl.
	* mule/mule-charset.el (make-translation-table): Ditto.
